# copier-python-typer

./: README.md  pyproject.toml
template/: .gitignore.jinja  pyproject.toml.jinja
template/src/{{project_package}}/: __main__.py
template/tests/: test_example.py.jinja
tests/: test_template.py
